iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__from_zero_to_many-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT host, usage_idle FROM non_existent\")"
---
EmptyRelation [iox::measurement:Dictionary(Int32, Utf8)]
